--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest, windows-2016, macOS-latest]
     steps:
       - name: clone repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v1.0.0
       - name: install deno
         uses: denolib/setup-deno@v1
         with:
