--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,18 @@
-name: test
+name: ci
 
-on: [push, pull-request, release]
+on: [push, pull_request, release]
 
 jobs:
-  build:
-    name: test on ${{ matrix.os }}
+  test:
+    name: test bwt on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2016, macOS-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: clone repo
         uses: actions/checkout@v1.0.0
       - name: install deno
         uses: denolib/setup-deno@v1
-        with:
-          deno-version: 'v0.18.0'
       - name: run tests
         run: deno run ./test.ts
