--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,7 @@ jobs:
         uses: actions/checkout@v1.0.0
       - name: install deno
         uses: denolib/setup-deno@v1
+        with:
+          deno-version: v0.24.0
       - name: run tests
         run: deno run ./test.ts
