--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: clone repo
-        uses: actions/checkout@v1.0.0
+        uses: actions/checkout@v2.0.0
       - name: install deno
-        uses: denolib/setup-deno@v1
+        uses: denolib/setup-deno@v1.2.0
         with:
           deno-version: v0.24.0
       - name: run tests
-        run: deno run ./test.ts
+        run: deno test
